@@ -1,5 +1,6 @@
 package uk.ac.ebi.ddi.api.readers.ws;
 
+import org.springframework.web.util.UriComponentsBuilder;
 import org.w3c.dom.Document;
 import uk.ac.ebi.ddi.api.readers.model.NcbiDataset;
 import uk.ac.ebi.ddi.api.readers.utils.XMLUtils;
@@ -20,14 +21,18 @@ public class NcbiClient {
 
     String filePath = "";
 
-    public NcbiClient(String filePath){
+    public NcbiClient(String filePath) {
         this.filePath = filePath;
     }
 
-    private File getNcbiFile(String id) throws Exception{
+    private File getNcbiFile(String id) throws Exception {
         File f = new File(filePath + "/" + id + ".soft");
-        if(!f.exists()){
-            URL website = new URL("https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=bioproject&id="+id);
+        if (!f.exists()) {
+            UriComponentsBuilder builder = UriComponentsBuilder.fromHttpUrl("https://eutils.ncbi.nlm.nih.gov")
+                    .path("/entrez/eutils/efetch.fcgi")
+                    .queryParam("db", "bioproject")
+                    .queryParam("id", id);
+            URL website = builder.build().encode().toUri().toURL();
             try (InputStream in = website.openStream()) {
                 Path targetPath = f.toPath();
                 Files.copy(in, targetPath, StandardCopyOption.REPLACE_EXISTING);
@@ -53,11 +58,14 @@ public class NcbiClient {
         dataset.description = XMLUtils.readFirstElement(doc, "ProjectDescr/Description");
         dataset.publicationDate = XMLUtils.readFirstElement(doc, "ProjectDescr/ProjectReleaseDate");
 
-        String omicsType = XMLUtils.readFirstElement(doc, "ProjectType/ProjectTypeSubmission/ProjectDataTypeSet/DataType");
-        if ((null != omicsType) && omicsType.contains("Transcriptome"))
+        String omicsType = XMLUtils.readFirstElement(doc,
+                "ProjectType/ProjectTypeSubmission/ProjectDataTypeSet/DataType");
+        if ((null != omicsType) && omicsType.contains("Transcriptome")) {
             dataset.omicsType = "Transcriptomics";
+        }
 
-        dataset.organismName = XMLUtils.readFirstElement(doc, "ProjectType/ProjectTypeSubmission/Target/Organism/OrganismName");
+        dataset.organismName = XMLUtils.readFirstElement(doc,
+                "ProjectType/ProjectTypeSubmission/Target/Organism/OrganismName");
 
         return dataset;
     }
